--- a/renovate.json
+++ b/renovate.json
@@ -1,6 +1,18 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": [
-    "config:recommended"
+  "assignees": [
+    "kymzky"
+  ],
+  "customManagers": [
+    {
+      "customType": "regex",
+      "fileMatch": [
+        "^nvim/lua/plugins/.*\\.lua$"
+      ],
+      "matchStrings": [
+        "return\\s*{\\s*'(?<depName>[a-zA-Z0-9_-]+/[a-zA-Z0-9_.-]+)'(?:,\\s*tag\\s*=\\s*'(?<currentValue>[^']+)')?"
+      ],
+      "datasourceTemplate": "github-releases"
+    }
   ]
 }
