Improve notes behaviour

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -42,6 +42,4 @@ bind-key t popup -E -d "#{pane_current_path}" -h 50% -w 50% -x 300% -y 0%
 bind-key T popup -E -d "#{pane_current_path}" -h 95% -w 95%
 
 # Floating applications
-bind-key n popup -E -d "#{pane_current_path}" -h 95% -w 95% notes
-bind-key g popup -E -d "#{pane_current_path}" -h 95% -w 95% lazygit
-bind-key 9 popup -E -d "#{pane_current_path}" -h 95% -w 95% k9s
+bind-key n popup -E -d "#{pane_current_path}" -h 95% -w 95% "fish -c notes"
