Visualize zoomed tmux pane

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -10,7 +10,7 @@ set -g status-left ""
 set -g status-right ""
 set-option -g status-style bg=default
 setw -g window-status-format '#[fg=#000000 bg=#666666] #I #[fg=#000000 bg=#444444] #W '
-setw -g window-status-current-format '#[fg=#ffffff bg=#666666] #I #[fg=#000000 bg=#ffffff] #W '
+setw -g window-status-current-format '#{?window_zoomed_flag,#[fg=#ffcc80 bg=#666666] #I #[fg=#000000 bg=#ffcc80] #W ,#[fg=#ffffff bg=#666666] #I #[fg=#000000 bg=#ffffff] #W }'
 set -g pane-border-style 'fg=#666666'
 set -g pane-active-border-style 'fg=#ffffff'
 set -g message-style 'fg=#000000 bg=#ffffff bold'
