Use mrgreengenes for tmux

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,20 +1,6 @@
 # General configuration
-set -g base-index 1
-set-option -g status-interval 1
-set-option -g automatic-rename-format '#{b:pane_current_path}'
-setw -g pane-base-index 1
-setw -g mouse on
-
-# UI configuration
-set -g status-left ""
-set -g status-right ""
-set-option -g status-style bg=default
-setw -g window-status-format '#[fg=#000000 bg=#666666] #I #[fg=#000000 bg=#444444] #W '
-setw -g window-status-current-format '#{?window_zoomed_flag,#[fg=#ffcc80 bg=#666666] #I #[fg=#000000 bg=#ffcc80] #W ,#[fg=#ffffff bg=#666666] #I #[fg=#000000 bg=#ffffff] #W }'
-set -g pane-border-style 'fg=#666666'
-set -g pane-active-border-style 'fg=#ffffff'
-set -g message-style 'fg=#000000 bg=#ffffff bold'
-setw -g mode-style 'fg=#000000 bg=#ffffff bold' # copy mode
+set -g default-terminal "alacritty" 
+set-option -sa terminal-overrides ",alacritty*:Tc"
 
 # Vim-like splits and pane navigation
 bind-key V split-window -h
@@ -43,3 +29,6 @@ bind-key T popup -E -d "#{pane_current_path}" -h 95% -w 95%
 
 # Floating applications
 bind-key n popup -E -d "#{pane_current_path}" -h 95% -w 95% "fish -c notes"
+
+# Theme
+source-file ~/.config/tmux/tmux.theme
