--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,4 +1,5 @@
 # General configuration
+set -g default-terminal "alacritty" 
 set-option -sa terminal-overrides ",alacritty*:Tc"
 
 # Vim-like splits and pane navigation
