Fix tmux colors

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,6 +1,5 @@
 # General configuration
-set -g default-terminal "alacritty" 
-set-option -sa terminal-overrides ",alacritty*:Tc"
+set-option -ga terminal-overrides '*:Tc'
 
 # Vim-like splits and pane navigation
 bind-key V split-window -h
