--- a/renovate.json
+++ b/renovate.json
@@ -4,11 +4,10 @@
     "kymzky"
   ],
   "dependencyDashboard": true,
-  "customManagers": [
+  "regexManagers": [
     {
-      "customType": "regex",
-      "managerFilePatterns": [
-        "/^nvim/lua/plugins/.*\\.lua$/"
+      "fileMatch": [
+        "\\.lua$"
       ],
       "matchStrings": [
         "return\\s*{\\s*'(?<depName>[a-zA-Z0-9_-]+/[a-zA-Z0-9_.-]+)'(?:,\\s*tag\\s*=\\s*'(?<currentValue>[^']+)')?"
