--- a/renovate.json
+++ b/renovate.json
@@ -13,7 +13,7 @@
       "matchStrings": [
         "['\"](?<depName>[a-zA-Z0-9_-]+/[a-zA-Z0-9_.-]+)['\"](?:\\s*,\\s*tag\\s*=\\s*['\"](?<currentValue>[^'\"]+)['\"])?"
       ],
-      "datasourceTemplate": "github-releases"
+      "datasourceTemplate": "github-tags"
     }
   ]
 }
